# sv2-cpu-miner

./: .gitignore  Cargo.toml  README.md  config.toml
.config/: nextest.toml
.github/: rust-lint.yml  rust-test.yml
src/: client.rs  config.rs  handler.rs  lib.rs  main.rs
src/miner/: extended.rs  standard.rs
tests/: test_one_extended_channel.rs  test_one_standard_channel.rs
